commited by vibhuti

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   url_launcher: ^6.2.6
   pinput: ^4.0.0
   flutter_otp_text_field: ^1.1.0
+  cached_network_image: ^3.3.1
+  carousel_slider: ^4.2.1
+  persistent_bottom_nav_bar: ^5.0.2
+  score_progress_pretty_display: ^1.0.5
+  shimmer: ^3.0.0
+
 #  nb_utils: ^7.0.2
 
 dev_dependencies:
@@ -69,6 +75,7 @@ flutter:
     - assets/
     - assets/images/
     - assets/icons/
+    - assets/static/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
